# -_0924

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_v3.md  CLAUDE.md  DO_NOT_TOUCH.txt  README.md  README_full.md  README_ko.md  automation_routine.txt  diff_report.md  implementation_status.txt  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run.bat
.claude/: settings.local.json
MCP/: OPEN_ISSUES.md  TASKS.yaml  init_message.txt
assets/templates/: cold_email_prompt.txt
config/: config.yaml  default.yaml  local.yaml.example  schema.py
data/: seed_urls.txt
data/storage/: ecommerce_database.xlsx
docs/: PRD.md  design_snapshot.md  healthcheck.md
examples/: expected_output_minimal.json  quickstart.ps1  sample_request_basic.json  sample_request_batch.json
prompts/: base.md  email.md
scripts/: dev.bat  dev.ps1
src/: app_logging.py  ultimate_automation_system.py
src/crawler/: browser.py  http.py
src/email/: compose.py
src/ingest/: registry.py
src/llm/: adapter.py
src/modules/: ai_generator.py  bugpack.py  data_processor.py  download_verifier.py  email_schema.py  error_handler.py  image_matcher.py  logger.py  utils.py  web_automation.py
tests/: SMOKE.md  test_ai_generator.py  test_cli.py  test_config.py  test_download_verifier.py  test_email.py  test_email_schema.py  test_http.py  test_ingest.py  test_llm_adapter.py  test_logging.py  test_normalize.py  test_parser.py  test_pipeline_segments.py  test_report.py  test_retry.py  test_store.py  test_validate.py
tools/: failurepack.py
(+18 files in other folders)
